--- a/app/src/main/res/layout/fragment_modify_day.xml
+++ b/app/src/main/res/layout/fragment_modify_day.xml
@@ -10,7 +10,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.9" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/modifyday_subjectbar"
         style="@style/AppTheme.Timetable.Tabbar"
         android:layout_width="match_parent"
