--- a/app/src/main/res/layout/fragment_modify_day.xml
+++ b/app/src/main/res/layout/fragment_modify_day.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <org.thecoders.smarttable.RearrangeableListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/modifyday_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
