--- a/app/src/main/res/layout/listview_item_homework.xml
+++ b/app/src/main/res/layout/listview_item_homework.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:paddingEnd="16dp"
     android:paddingStart="16dp">
 
