--- a/app/src/main/res/menu/menu_edit_subject.xml
+++ b/app/src/main/res/menu/menu_edit_subject.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.thecoders.smarttable.ui.activities.Activity_EditSubject">
+    tools:context="org.thecoders.smarttable.ui.activities.EditSubjectActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
