--- a/app/src/main/res/layout/listview_item_exam.xml
+++ b/app/src/main/res/layout/listview_item_exam.xml
@@ -38,13 +38,13 @@
         app:layout_constraintTop_toBottomOf="@id/item_exam_subject" />
 
     <ImageView
-        android:id="@+id/item_exam_delete"
+        android:id="@+id/item_exam_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/content_description_delete_icon"
-        app:srcCompat="@drawable/ic_delete_24px"
         app:layout_constraintBottom_toBottomOf="@id/item_exam_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/item_exam_subject" />
+        app:layout_constraintTop_toTopOf="@id/item_exam_subject"
+        app:srcCompat="@drawable/ic_mode_edit_dark_24px" />
 
 </android.support.constraint.ConstraintLayout>
