--- a/app/src/main/res/layout/listview_item_homework.xml
+++ b/app/src/main/res/layout/listview_item_homework.xml
@@ -38,11 +38,11 @@
         app:layout_constraintTop_toBottomOf="@id/item_homework_subject" />
 
     <ImageView
-        android:id="@+id/item_homework_delete"
+        android:id="@+id/item_homework_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/content_description_delete_icon"
-        app:srcCompat="@drawable/ic_delete_24px"
+        android:contentDescription="@string/content_description_edit_icon"
+        app:srcCompat="@drawable/ic_mode_edit_dark_24px"
         app:layout_constraintBottom_toBottomOf="@id/item_homework_deadline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/item_homework_subject" />
