--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:textColorPrimaryInverse">@color/primary_text_inverse</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:textColorSecondaryInverse">@color/secondary_text_inverse</item>
+        <item name="actionModeBackground">@color/primary</item>
     </style>
 
     <style name="AppTheme.Timetable.Tabbar" parent="AppTheme">
